--- a/presentations/rhydro.Rmd
+++ b/presentations/rhydro.Rmd
@@ -17,16 +17,16 @@ if (knitr:::is_html_output()) {
 }
 ```
 
-# Using R in hydrology (EGU2017 short course)
+<font size="6">Using R in hydrology (EGU2017 short course)</font>   
 
-These slides and all other course materials can be found at:
+*Instructors*: Shaun Harrigan, Katie Smith, Berry Boessenkool and Daniel Klotz  
+*Organizer*: Berry Boessenkool, PhD student at Potsdam University (Germany)  
+*Contact*: Questions and feedback are welcome via <berry-b@gmx.de>
 
-<font size="6">[github.com/brry/rhydro](https://github.com/brry/rhydro)</font> 
-<font size="4">#slides</font>   
-
-To get all the material including the datasets and presentation source code, we recommend to
-[download the whole github course repository](https://github.com/brry/rhydro/archive/master.zip).
-
+These slides and all other course materials can be found at  
+<font size="6">[github.com/brry/rhydro](https://github.com/brry/rhydro)</font>   
+[Download the github course repository](https://github.com/brry/rhydro/archive/master.zip)
+with all the materials including the datasets and presentation source code.  
 This is an [R Markdown Notebook](http://rmarkdown.rstudio.com/r_notebooks.html).  
 For discussions, please visit the 
 [Hydrology in R Facebook group](https://www.facebook.com/groups/1130214777123909/).  
@@ -67,7 +67,7 @@ Before we get started, please let us know your current R knowledge level by fill
 [top](#top)
 
 # Report
-Good coding practice, [report generation](#report) (Rstudio, `rmarkdown`, R notebook)  
+Good coding practice, report generation (Rstudio, `rmarkdown`, R notebook)  
 **Daniel Klotz**
 
 ## Introduction
@@ -246,8 +246,13 @@ or better: [download the whole github course repository](https://github.com/brry
 
 ```{r}
 rain <- sf::st_read("data/PrecBrandenburg/niederschlag.shp")
+```
+
+Central points of rainfall Thiessen polygons
+```{r}
 centroids <- sf::st_centroid(rain)
 centroids <- sf::st_coordinates(centroids)
+centroids <- as.data.frame(centroids)
 ```
 
 [top](#top)
@@ -262,9 +267,11 @@ plot(rain[,1])
 Static map:
 ```{r}
 prj <- sf::st_crs(rain)$proj4string
-centroids <- as.data.frame(centroids)
 cent_ll <- OSMscale::projectPoints(Y,X, data=centroids, to=OSMscale::pll(), from=prj)
-map_static <- OSMscale::pointsMap(y,x, cent_ll, fx=0.08, type="maptoolkit-topo", zoom=6)
+#map_static <- OSMscale::pointsMap(y,x, cent_ll, fx=0.08, type="maptoolkit-topo", zoom=6)
+#save(map_static, file="data/map_static.Rdata")
+load("data/map_static.Rdata")
+OSMscale::pointsMap(y,x, cent_ll, map=map_static)
 ```
 
 Interactive map:
@@ -278,9 +285,8 @@ leaflet(cent_ll) %>% addTiles() %>% addCircleMarkers(lng=~x, lat=~y, popup=~info
 Interactive map of shapefile:
 ```{r}
 # make sure to have installed the development version of mapview: 
-  # devtools::install_github("environmentalinformatics-marburg/mapview", ref = "develop")
+# devtools::install_github("environmentalinformatics-marburg/mapview", ref = "develop")
 library(berryFunctions) # classify, seqPal
-library(mapview)
 col <- seqPal(n=100, colors=c("red","yellow","blue"))[classify(rain$P1)$index]
 mapview::mapview(rain, col.regions=col)
 ```
@@ -330,7 +336,7 @@ krico <- krige.control(type.krige="OK", obj.model=fit)
 load("data/krobj.Rdata") # line above is too slow for recreation each time
 ```
 
-Plot the interpolated values with \rcode{image} or an equivalent 
+Plot the interpolated values with `image` or an equivalent function 
 (see [Rclick](https://github.com/brry/rclick) 4.15) and add contour lines.
 ```{r}
 par(mar=c(0,3,0,3))
@@ -339,13 +345,159 @@ colPoints(x, y, rain$P1, col=pcol, legargs=list(horiz=F, title="Prec",y1=0.1,x1=
 points(x,y)
 plot(rain, col=NA, add=TRUE)
 ```
-
 \
 [top](#top)
 
 # Discharge
 River discharge time-series visualisation and extreme value statistics (`animation` + `extremeStat`)  
 **Berry Boessenkool**
+
+### Read, plot and aggregate data
+
+Datasets from <http://nrfa.ceh.ac.uk/data/station/meanflow/39072>  
+Download 
+[discharge1](https://github.com/brry/rhydro/tree/master/presentations/data/discharge39072.csv),
+[discharge2_xxx](https://github.com/brry/rhydro/tree/master/presentations/data/discharge.csv), 
+[discharge3_xxx](https://github.com/brry/rhydro/tree/master/presentations/data/discharge.csv), 
+or better: [download the whole github course repository](https://github.com/brry/rhydro/archive/master.zip)
+
+Read and transform data
+```{r}
+Q <- read.table("data/discharge39072.csv", skip=19, header=TRUE, sep=",", fill=TRUE)[,1:2]
+colnames(Q) <- c("date","Royal_Windsor_Park")
+Q$date <- as.Date(Q$date, format="%Y-%m-%d")
+```
+
+Examine data
+```{r}
+head(Q)
+```
+
+```{r}
+str(Q)
+```
+
+Simple time series plot
+```{r}
+plot(Q, type="l", col="blue")
+```
+
+Publication-ready graphics
+```{r}
+png("DischargeVis.png", width=20, height=10, units="cm", res=500)
+#pdf("DischargeVis.pdf", width=20/2.5, height=10/2.5) # vector graph
+par(mar=c(3.5,3.5,2.5,0.2), mgp=c(2.3,0.7,0), las=1)
+plot(Q, type="l", col="blue", main="NRFA: Thames\nRoyal Windsor Park",
+     xlab="Date", ylab="Discharge  [m\U{00B3}/s]")
+dev.off()
+```
+
+Annual maxima, German hydrological year split at Oct 31
+```{r}
+Q$hydyear <- as.numeric(format(Q$date+61, "%Y"))
+annmax <- tapply(Q$Royal_Windsor_Park, Q$hydyear, max, na.rm=TRUE)
+annmax <- annmax[-1]
+hydyear <- as.numeric(names(annmax)) 
+plot(hydyear, annmax, type="o", las=1)
+```
+
+### Extreme value statistics
+
+```{r}
+library(extremeStat)
+dlf <- distLfit(annmax)
+plotLfit(dlf)
+plotLfit(dlf, cdf=TRUE)
+dle <- distLextreme(dlf=dlf, RPs=c(5,10,50,100), gpd=FALSE)
+plotLextreme(dle)
+```
+
+Logarithmic plot with many fitted distribution functions
+```{r}
+plotLextreme(dle, nbest=16, log=TRUE)
+```
+
+Return values (discharge estimates for given return periods)
+```{r}
+dlf$returnlev
+```
+In reality, please use non-stationary EVS!
+
+Uncertainty band for Wakeby distribution fit estimate
+```{r}
+dle_boot <- distLexBoot(dle, n=10, nbest=1)
+plotLexBoot(dle_boot, distcol="green")
+```
+
+
+More details in the package vignette
+```{r}
+vignette("extremeStat")
+```
+
+
+### Animated movie
+
+
+Read data from several discharge stations
+```{r}
+if(FALSE){
+Q2 <- read.table("data/discharge_____.csv", skip=19, header=TRUE, sep=",", fill=TRUE)[,1:2]
+colnames(Q2) <- c("date","dummy1");  Q2$date <- as.Date(Q2$date, format="%Y-%m-%d")
+Q3 <- read.table("data/discharge_____.csv", skip=19, header=TRUE, sep=",", fill=TRUE)[,1:2]
+colnames(Q3) <- c("date","dummy2");  Q3$date <- as.Date(Q3$date, format="%Y-%m-%d")
+}
+Q2 <- Q ; Q2[,2] <- Q2[,2] + 100 ; Q2 <- Q2[-(1:100),]
+Q3 <- Q ; Q3[,2] <- Q3[,2] -  50 ; Q3 <- head(Q3, -365*3)
+colnames(Q2)[2] <- "dummy1"; colnames(Q3)[2] <- "dummy2"
+```
+
+Merge datasets
+```{r}
+dis <- Reduce(function(...) merge(..., all=T), list(Q,Q2,Q3))
+```
+
+Code to generate one movie slice
+```{r}
+library(berryFunctions) # for lim0, monthAxis, textField, etc
+
+scene <- function(i, vlcnote=TRUE, cex=1.2)
+{
+ sel <- 0:120
+ dis2 <- dis[i + sel, ]
+ stat <- c("Royal_Windsor_Park", "dummy1", "dummy2")
+ col <- c("red", "blue", "orange")
+ names(col) <- stat
+ plot(dis2$date,dis2$Royal_Windsor_Park, type="n", ylim=lim0(500),  las=1, 
+      xaxt="n", yaxt="n", cex.lab=cex, xlab="", 
+      ylab="Discharge  [m\U{00B3}/s]", xaxs="i")
+ axis(2, cex.axis=cex, las=1)
+ Sys.setlocale("LC_TIME", "C")
+ monthAxis(midmonth=TRUE, format="%b\n%Y", cex=cex, mgp=c(3,3.5,0))
+ abline(h=1:6*100, v=dis2$date[format(dis2$date,"%d")=="01"], col=8)
+ for(s in stat) lines(dis2$date, dis2[,s], lwd=4, col=col[s])
+ xi <- seqR(sel,len=length(stat)+2)[-1]
+ xi <- head(xi, -1)
+ textField(dis2$date[xi], diag(as.matrix(dis2[xi,stat])), stat, cex=cex, col=col)
+ box()
+ if(vlcnote) mtext("VLC: 'e': single frame forward\n'SHIFT+LEFT': few seconds back",
+                   side=3, line=-9, outer=TRUE, adj=0.95, cex=cex)
+}
+
+par(mar=c(5,5,0.5,0.5), mgp=c(3,0.7,0))
+scene(150)
+```
+
+Actual movie
+```{r, eval=FALSE}
+library(animation)
+saveVideo({par(mar=c(6,8,1,1), mgp=c(5.5,0.7,0))
+ dummy <- pbsapply(seq(0, by=3, len=50), scene, cex=2); rm(dummy)
+}, video.name="Qmovie.mp4", interval=0.1, ffmpeg="/usr/bin/ffmpeg", 
+ani.width=7*200, ani.height=5*200)
+```
+
+[Open video in default mp4player](Qmovie.mp4)
 
 \
 [top](#top)
